--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <h1>Joseph Zavilla</h1>
   </head>
   <body>
-    <a href="/pages/Contact.html"><h3>Contact</h3></a>
-    <a href="/pages/about.html"><h3>About</h3></a>
+    <a href="pages/Contact.html"><h3>Contact</h3></a>
+    <a href="pages/about.html"><h3>About</h3></a>
     <a href="https://bewareofgoblins.substack.com/"><h3>Blog</h3></a>
-    <a href="/pages/Writing.html"><h3>Writing</h3></a>
+    <a href="pages/Writing.html"><h3>Writing</h3></a>
     <a href="https://www.youtube.com/@deadedead"><h3>Film</h3></a>
-    <a href="/pages/art.html"><h3>Art</h3></a>
-    <a href="/pages/podcasts.html""><h3>Podcasts</h3></a>
-    <a href="/pages/photography.html"<h3>Photography</h3></a>
+    <a href="pages/art.html"><h3>Art</h3></a>
+    <a href="pages/podcasts.html""><h3>Podcasts</h3></a>
+    <a href="pages/photography.html"<h3>Photography</h3></a>
     <a href="https://josephzavilla.bandcamp.com/"><h3>Music</h3></a>
     <a href="https://dead-mountain-games.itch.io/"><h3>Games</h3></a>
-    <a href="/pages/changelog.html"><h3>Changelog</h3></a>
+    <a href="pages/changelog.html"><h3>Changelog</h3></a>
   </body
 </html>
