--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="https://bewareofgoblins.substack.com/"><h3>Blog</h3></a>
     <a href="pages/Writing.html"><h3>Writing</h3></a>
     <a href="https://www.youtube.com/@deadedead"><h3>Film</h3></a>
-    <a href="pages/art.html"><h3>Art</h3></a>
+    <a href="DigitalArt/"><h3>Art</h3></a>
     <a href="pages/podcasts.html""><h3>Podcasts</h3></a>
     <a href="pages/photography.html"<h3>Photography</h3></a>
     <a href="https://josephzavilla.bandcamp.com/"><h3>Music</h3></a>
