--- a/pages/changelog.html
+++ b/pages/changelog.html
@@ -6,6 +6,10 @@
   <body>
     <ul>
       <li>
+        07.15.25: Set up site on Github pages. Added custom domain. Photography
+        and art pages are broken. Updated changelog.
+      </li>
+      <li>
         07.4.25: Created skeleton of site, including basic text pages, links to
         exterior sites; bandcamp, substack, youtube, podcast hosts, itch.io, and
         my instagram and email. Started making page for photography.
